[workspace]
members = [
    "stamp"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptographic dependencies
ring = "0.17"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
base64 = "0.21"
hex = "0.4"

# file handling
walkdir = "2.4"
tempfile = "3.8"

# Additional dependencies
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
